--- a/themes/hermit/assets/scss/_predefined.scss
+++ b/themes/hermit/assets/scss/_predefined.scss
@@ -20,7 +20,7 @@ $code-fonts: Consolas, "Andale Mono WT", "Andale Mono", Menlo, Monaco, "Lucida C
 
 @mixin aTag {
   a {
-    word-wrap: break-word;
+    word-break: break-all;
     border: none;
     box-shadow: inset 0 -4px 0 $theme;
     transition-property: background-color;
