--- a/themes/hermit/assets/scss/style.scss
+++ b/themes/hermit/assets/scss/style.scss
@@ -22,7 +22,6 @@ html {
   background: $light-grey;
   line-height: 1.6;
   letter-spacing: .06em;
-  scroll-behavior: smooth;
 }
 
 body,
@@ -41,12 +40,14 @@ pre tt {
 }
 
 pre {
+  max-height: 40em;
   padding: .7em 1.1em;
   overflow: auto;
   font-size: .9em;
   line-height: 1.5;
   letter-spacing: normal;
-  white-space: pre;
+  white-space: pre-wrap;
+  word-wrap: break-word;
   color: #eee;
   background: $midnightblue;
   border-radius: 4px;
@@ -65,7 +66,7 @@ code {
   border-radius: 3px;
   padding: 0 3px;
   margin: 0 4px;
-  word-wrap: break-word;
+  word-break: break-all;
   letter-spacing: normal;
 }
 
@@ -316,6 +317,7 @@ p.img-404 {
 
   p {
     margin-top: 0;
+    margin-bottom: .6em;
   }
 
   .btn-404 {
@@ -327,6 +329,7 @@ p.img-404 {
       border-radius: 5px;
       padding: 5px;
       transition-property: color, border-color;
+      word-break: break-all;
 
       &:first-child {
         margin-right: 1em;
@@ -408,11 +411,6 @@ p.img-404 {
     margin-right: 1.8em;
     font-size: 1.6em;
     @include dimmed;
-
-    &:hover {
-      text-decoration: underline;
-      cursor: pointer;
-    }
   }
 
   .posts-list {
@@ -535,39 +533,6 @@ hr.post-end {
   ol {
     padding: 0;
     margin-left: 1.8em;
-  }
-
-  a.anchor {
-    float: left;
-    margin-left: -20px;
-    padding-right: 6px;
-    box-shadow: none;
-    opacity: .8;
-    &:hover {
-      background: none;
-      color: $theme;
-      opacity: 1;
-    }
-
-    svg {
-      display: inline-block;
-      width: 14px;
-      height: 14px;
-      vertical-align: baseline;
-      visibility: hidden;
-    }
-    &:focus svg {
-      visibility: visible;
-    }
-  }
-
-  h1:hover a.anchor svg,
-  h2:hover a.anchor svg,
-  h3:hover a.anchor svg,
-  h4:hover a.anchor svg,
-  h5:hover a.anchor svg,
-  h6:hover a.anchor svg {
-    visibility: visible;
   }
 }
 
